# ostis-linguistics

./: .editorconfig  .gitignore  README.md  nrel_answer.scs
agents/: additionals_names.scs  ag2_test.gwf  correct_test(1).scs  correct_test.scs  proc_run_all_additional_names(1).scs  proc_run_all_additional_names.scs  proc_run_all_correct_test.scs  test.gwf  test_correct.gwf
agents/agent_determining_ability_of_combining_two_lexemes/: ui_menu_file_for_determining_ability_of_combining_two_lexemes.scs
examples/: lexemes.scs
kb/: linguistics_knowledge_base.scs  testing.gwf
kb/section_subjdomain_of_natural_language_texts/: classification.scs  (+2 more)
plain-text-interface/: Gruntfile.js  components.html
problem-solver/cxx/dialogModule/: CMakeLists.txt  dialogModule.cpp  dialogModule.hpp
problem-solver/cxx/dialogModule/agents/: TextNormalizationAgent.cpp  TextNormalizationAgent.hpp
problem-solver/cxx/dialogModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/dialogModule/specifications/agent_of_text_normalization/: lib_component_ui_menu_text_normalization.scs  ui_menu_text_normalization.scsi
scripts/: install_ostis.sh
section_sd_of_natural_language_texts/: concept_idtf.scs  subject_domain_of_natural_language_texts.scs
section_sd_of_natural_languages/: concept_idtfs.scs  subject_domain_of_languages.scs
section_subjdomain_of_languages/: section_subjdomain_of_languages.scs  section_subjdomain_of_languages.scsi
section_subjdomain_of_natural_language_texts/: section_subjdomain_of_natural_language_texts.scs  section_subjdomain_of_natural_language_texts.scsi
(+356 files in other folders)
